[package]
name = "persistent-scheduler"
version = "0.2.0"
author = "Pedro Rocha"
edition = "2021"
description = "A high-performance task scheduling system developed in Rust using Tokio. This system supports task persistence, repeatable tasks, Cron-based scheduling, and one-time tasks, ensuring reliability and flexibility for managing time-based operations in various applications."
license-file = "LICENSE"
documentation = "https://docs.rs/persistent-scheduler/0.2.0/"
repository = "https://github.com/inboxsphere/persistent-scheduler"

[features]
default = ["nativedb"]
nativedb = ["native_db", "native_model", "once_cell", "itertools", "sysinfo"]


[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["full"] }
croner = "2.1.0"
chrono = "0.4.38"
chrono-tz = "0.10.0"
serde_json = "1.0.133"
ulid = "1.1.2"
tracing = "0.1.40"
async-trait = "0.1.83"
tracing-subscriber = "0.3.18"

native_db = { version = "0.8.1", optional = true }
native_model = { version = "0.4.20", optional = true }
once_cell = { version = "1.19.0", optional = true }
itertools = { version = "0.13.0", optional = true }
sysinfo = { version = "0.32.0", optional = true }
ahash = "0.8.11"


[[example]]
name = "basic"
path = "examples/basic.rs"


[[example]]
name = "nativedb"
path = "examples/nativedb.rs"
required-features = ["nativedb"]
